--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Campus Leads
     </title>
     <link rel="icon" href="C:\Users\Acer\Desktop\Campus Leads Website\Images\download.png" type="image/x-icon" />
-    <link rel="stylesheet" href="C:\Users\Acer\Desktop\Campus Leads Website\style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body background="C:\Users\Acer\Desktop\Campus Leads Website\Images\Evp logo.png">
