--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
     <title>Campus Leads
     </title>
-    <link rel="icon" href="C:\Users\Acer\Desktop\Campus Leads Website\Images\download.png" type="image/x-icon" />
+    <link rel="icon" href="Images\download.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body background="C:\Users\Acer\Desktop\Campus Leads Website\Images\Evp logo.png">
+<body background="Images\Evp logo.png">
 
     <div class="header">
-        <img src="C:\Users\Acer\Desktop\Campus Leads Website\Images\download.png" alt="EdVenture Park" width="100px"
+        <img src="\Images\download.png" alt="EdVenture Park" width="100px"
             height="100px" class="logo"> </img>
-        <a href="file:///C:/Users/Acer/Desktop/Campus%20Leads.html" class="home_button">Home</a>
-        <a href="C:\Users\Acer\Desktop\Campus Leads Website\EdVenture Park.txt" class="About">About Us</a>
-        <a href="C:\Users\Acer\Desktop\Campus Leads Website\Contact.txt" class="Contact">Contact</a>
-        <a href="C:\Users\Acer\Desktop\Campus Leads Website\Our Companies.html" class="Our_companies">Our Companies</a>
-        <a href="C:\Users\Acer\Desktop\Campus Leads Website\What We Offer.html" class="what_we_offer">What We Offer</a>
+        <a href="/" class="home_button">Home</a>
+        <a href="EdVenture Park.txt" class="About">About Us</a>
+        <a href="Contact.txt" class="Contact">Contact</a>
+        <a href="Our Companies.html" class="Our_companies">Our Companies</a>
+        <a href="What We Offer.html" class="what_we_offer">What We Offer</a>
         <br><br>
-        <a href="C:\Users\Acer\Desktop\Campus Leads Website\Sign Up.html" class="Sign_up">Sign Up</a> <br>
-        <a href="C:\Users\Acer\Desktop\Campus Leads Website\Login.html" class="Login">Login</a>
+        <a href="Sign Up.html" class="Sign_up">Sign Up</a> <br>
+        <a href="Login.html" class="Login">Login</a>
     </div>
     <div class="first_slide"><br>
         <h1>JOIN AS A CAMPUS LEAD</h1> <br>
@@ -31,22 +31,22 @@
     <div>
         <h1 class="events_h1">Events</h1>
         <marquee behavior="scroll" direction="right"> <img
-                src="C:\Users\Acer\Desktop\Campus Leads Website\Images\1_v3afrn.jpg" alt=""
+                src="Images\1_v3afrn.jpg" alt=""
                 height="200px; width:200px;">
-            <img src="C:\Users\Acer\Desktop\Campus Leads Website\Images\3_mcwye8.jpg" alt=""
+            <img src="Images\3_mcwye8.jpg" alt=""
                 height="200px; width:200px;">
-            <img src="C:\Users\Acer\Desktop\Campus Leads Website\Images\6_glcl6d.jpg" alt=""
+            <img src="Images\6_glcl6d.jpg" alt=""
                 height="200px; width:200px;">
-            <img src="C:\Users\Acer\Desktop\Campus Leads Website\Images\Image 1.jpg" alt=""
+            <img src="Images\Image 1.jpg" alt=""
                 height="200px; width:200px;">
         </marquee>
         <marquee behavior="scroll" direction=""><img src="C:\Users\Acer\Desktop\Campus Leads Website\Images\Image 2.jpg"
                 alt="" height="200px; width:200px;">
-            <img src="C:\Users\Acer\Desktop\Campus Leads Website\Images\Image 3.jpg" alt=""
+            <img src="Images\Image 3.jpg" alt=""
                 height="200px; width:400px;">
-            <img src="C:\Users\Acer\Desktop\Campus Leads Website\Images\Image 4.jpg" alt=""
+            <img src="Images\Image 4.jpg" alt=""
                 height="200px; width:400px;">
-            <img src="C:\Users\Acer\Desktop\Campus Leads Website\Images\2_lmawf9.jpg" alt=""
+            <img src="Images\2_lmawf9.jpg" alt=""
                 height="200px; width:500px;">
         </marquee>
 
@@ -94,9 +94,9 @@
     </div>
     </h4>
     <div>
-        <a href="file:///C:/Users/Acer/Desktop/Campus%20Leads.html" class="fo_home">Home</a>
-        <a href="C:\Users\Acer\Desktop\Campus Leads Website\EdVenture Park.txt" class="About">About Us</a>
-        <a href="C:\Users\Acer\Desktop\Campus Leads Website\Contact.html" class="Contact">Contact</a>
+        <a href="/" class="fo_home">Home</a>
+        <a href="EdVenture Park.txt" class="About">About Us</a>
+        <a href="Contact.html" class="Contact">Contact</a>
         <h2 class="made_with">Made with Love.</h2>
     </div>
 </body>
