--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body background="Images\Evp logo.png">
 
     <div class="header">
-        <img src="\Images\download.png" alt="EdVenture Park" width="100px"
+        <img src="Images\download.png" alt="EdVenture Park" width="100px"
             height="100px" class="logo"> </img>
-        <a href="/" class="home_button">Home</a>
+        <a href="#" class="home_button">Home</a>
         <a href="EdVenture Park.txt" class="About">About Us</a>
         <a href="Contact.txt" class="Contact">Contact</a>
         <a href="Our Companies.html" class="Our_companies">Our Companies</a>
@@ -42,7 +42,7 @@
         </marquee>
         <marquee behavior="scroll" direction=""><img src="C:\Users\Acer\Desktop\Campus Leads Website\Images\Image 2.jpg"
                 alt="" height="200px; width:200px;">
-            <img src="Images\Image 3.jpg" alt=""
+            <img src="Images\1_v3afrn.jpg" alt=""
                 height="200px; width:400px;">
             <img src="Images\Image 4.jpg" alt=""
                 height="200px; width:400px;">
@@ -94,7 +94,7 @@
     </div>
     </h4>
     <div>
-        <a href="/" class="fo_home">Home</a>
+        <a href="#" class="fo_home">Home</a>
         <a href="EdVenture Park.txt" class="About">About Us</a>
         <a href="Contact.html" class="Contact">Contact</a>
         <h2 class="made_with">Made with Love.</h2>
