--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img src="Images\Image 1.jpg" alt=""
                 height="200px; width:200px;">
         </marquee>
-        <marquee behavior="scroll" direction=""><img src="C:\Users\Acer\Desktop\Campus Leads Website\Images\Image 2.jpg"
+        <marquee behavior="scroll" direction=""><img src="Images\Image 2.jpg"
                 alt="" height="200px; width:200px;">
             <img src="Images\1_v3afrn.jpg" alt=""
                 height="200px; width:400px;">
@@ -96,7 +96,7 @@
     <div>
         <a href="#" class="fo_home">Home</a>
         <a href="EdVenture Park.txt" class="About">About Us</a>
-        <a href="Contact.html" class="Contact">Contact</a>
+        <a href="Contact.txt" class="Contact">Contact</a>
         <h2 class="made_with">Made with Love.</h2>
     </div>
 </body>
