--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
     <div class="first_slide"><br>
         <h1>JOIN AS A CAMPUS LEAD</h1> <br>
         <h2 class="want_to">Want to contribute to writing History with EdVenture Park?</h2>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfL0GvBQWWzKDviRllhj-FOT688r2U14qGBWiCLI8d_QMgdaQ/viewform"
-            class="apply">Apply Now</a>
-
+        </div>
     </div>
+        <div id="apply">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfL0GvBQWWzKDviRllhj-FOT688r2U14qGBWiCLI8d_QMgdaQ/viewform"
+            >Apply Now</a>
+        </div>
     <div>
         <h1 class="events_h1">Events</h1>
         <marquee behavior="scroll" direction="right"> <img
